{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 54,
  "lineage": "5e1ae87a-373d-7a2c-1a6f-06e006cc87fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f3416038bdb17fb",
            "arn": "arn:aws:ec2:us-east-1::instance/i-0c8766637b2e91388",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c8766637b2e91388",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-41e0d7a2",
            "private_dns": "ip-10-194-181-209.ec2.internal",
            "private_ip": "10.194.181.209",
            "public_dns": "ec2-54-214-200-64.compute-1.amazonaws.com",
            "public_ip": "54.214.200.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-acdf0389",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-example"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-da053b54",
            "tags": {
              "Environment": "dev",
              "Name": "backend-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "backend-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-bd7df1a31dd5dc666"
            ]
          },
          "dependencies": [
            "aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cruncher",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f3416038bdb17fb",
            "arn": "arn:aws:ec2:us-east-1::instance/i-4b6e227ff9524a289",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-4b6e227ff9524a289",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-874f1297",
            "private_dns": "ip-10-2-73-162.ec2.internal",
            "private_ip": "10.2.73.162",
            "public_dns": "ec2-54-214-166-68.compute-1.amazonaws.com",
            "public_ip": "54.214.166.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-530ac865",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-example"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-da053b54",
            "tags": {
              "Environment": "dev",
              "Name": "cruncher-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "cruncher-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-bd7df1a31dd5dc666"
            ]
          },
          "dependencies": [
            "aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f3416038bdb17fb",
            "arn": "arn:aws:ec2:us-east-1::instance/i-97b88ddd5acf88477",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-97b88ddd5acf88477",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-cf28f5eb",
            "private_dns": "ip-10-103-40-165.ec2.internal",
            "private_ip": "10.103.40.165",
            "public_dns": "ec2-54-214-156-37.compute-1.amazonaws.com",
            "public_ip": "54.214.156.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-6bcc4d91",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-example"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-da053b54",
            "tags": {
              "Environment": "dev",
              "Name": "frontend-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "frontend-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-bd7df1a31dd5dc666"
            ]
          },
          "dependencies": [
            "aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "matcher",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f3416038bdb17fb",
            "arn": "arn:aws:ec2:us-east-1::instance/i-3f7a7e605c88ac2b1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-3f7a7e605c88ac2b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-2559f85c",
            "private_dns": "ip-10-131-27-219.ec2.internal",
            "private_ip": "10.131.27.219",
            "public_dns": "ec2-54-214-0-75.compute-1.amazonaws.com",
            "public_ip": "54.214.0.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-fcfbc964",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-example"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-da053b54",
            "tags": {
              "Environment": "dev",
              "Name": "matcher-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "matcher-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-bd7df1a31dd5dc666"
            ]
          },
          "dependencies": [
            "aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-bd7df1a31dd5dc666",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-bd7df1a31dd5dc666",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-example",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-57e0053f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-4329e6e44a4495428",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-4329e6e44a4495428",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "monitoring",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-57e0053f"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}